--- a/blog-single.html
+++ b/blog-single.html
@@ -40,8 +40,8 @@
         <div class="col-lg-6 col-md-5">
           <div class="header__top__right">
             <div class="header__top__links">
-              <a href="#">Sign in</a>
-              <a href="#">Sing out</a>
+              <a href="login.php">Sign in</a>
+              <a href="login.php">Sign out</a>
             </div>
           </div>
         </div>
