--- a/contact.html
+++ b/contact.html
@@ -93,10 +93,9 @@
               <a class="dropdown-item" href="checkout.php">Checkout</a>
             </div>
           </li>
-          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-          <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
+          <li class="nav-item cta cta-colored"><a href="cart.php" class="nav-link"><span
                 class="icon-shopping_cart"></span>[0]</a></li>
 
         </ul>
